--- a/.github/workflows/kafka-server-docker.yml
+++ b/.github/workflows/kafka-server-docker.yml
@@ -3,9 +3,7 @@ name: Build and Push Docker Image for kafka-server-host
 on:
   push:
     branches:
-      - main
-    paths:
-      - KafkaServer/**
+      main
 
 permissions:
   packages: write
