--- a/.github/workflows/kafka-server-docker.yml
+++ b/.github/workflows/kafka-server-docker.yml
@@ -21,7 +21,7 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ghcr.io/deepview-analytics/kafka-server-host:latest ./kafka-server-host
+      run: docker build -t ghcr.io/deepview-analytics/kafka-server-host:latest ./KafkaService
 
     - name: Push Docker image to GitHub Packages
       run: docker push ghcr.io/deepview-analytics/kafka-server-host:latest
