--- a/.github/workflows/kafka-server-docker.yml
+++ b/.github/workflows/kafka-server-docker.yml
@@ -1,10 +1,11 @@
 name: Build and Push Docker Image for kafka-server-host
-
 on:
+
   push:
     branches:
-      main
-
+      - main
+    paths:
+      - KafkaService/**
 permissions:
   packages: write
   contents: read
@@ -21,7 +22,7 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ghcr.io/deepview-analytics/kafka-server-host:latest ./KafkaServer
+      run: docker build -t ghcr.io/deepview-analytics/kafka-server-host:latest ./KafkaService
 
     - name: Push Docker image to GitHub Packages
       run: docker push ghcr.io/deepview-analytics/kafka-server-host:latest
