--- a/KafkaService/Dockerfile
+++ b/KafkaService/Dockerfile
@@ -13,12 +13,23 @@ RUN chmod +x /usr/bin/topics-creation-commands.sh
 # Append to the existing server.properties
 RUN cat /etc/kafka/config/new-server.properties >> /etc/kafka/server.properties
 
-# Install ZooKeeper directly using yum
-RUN yum install -y wget && \
-    wget https://archive.apache.org/dist/zookeeper/zookeeper-3.6.2/apache-zookeeper-3.6.2-bin.tar.gz && \
+# Install wget
+RUN yum install -y wget
+
+# Download and install ZooKeeper
+RUN wget https://archive.apache.org/dist/zookeeper/zookeeper-3.6.2/apache-zookeeper-3.6.2-bin.tar.gz && \
     tar -zxf apache-zookeeper-3.6.2-bin.tar.gz && \
     mv apache-zookeeper-3.6.2-bin /opt/zookeeper && \
-    rm apache-zookeeper-3.6.2-bin.tar.gz
+    rm apache-zookeeper-3.6.2-bin.tar.gz && \
+    mkdir /opt/zookeeper/logs && \
+    touch /opt/zookeeper/conf/zoo.cfg
+
+# Create a ZooKeeper config file
+RUN echo "tickTime=2000" >> /opt/zookeeper/conf/zoo.cfg && \
+    echo "dataDir=/opt/zookeeper/data" >> /opt/zookeeper/conf/zoo.cfg && \
+    echo "clientPort=2181" >> /opt/zookeeper/conf/zoo.cfg && \
+    echo "initLimit=5" >> /opt/zookeeper/conf/zoo.cfg && \
+    echo "syncLimit=2" >> /opt/zookeeper/conf/zoo.cfg
 
 # Configuration and verification
 RUN cat /etc/kafka/server.properties
