--- a/KafkaService/Dockerfile
+++ b/KafkaService/Dockerfile
@@ -33,6 +33,7 @@ RUN echo "tickTime=2000" >> /opt/zookeeper/conf/zoo.cfg && \
 
 # Fix permission issues
 RUN chown -R cp-kafka:confluent /opt/zookeeper /etc/kafka/
+RUN chmod -R 777 /etc/kafka/
 
 # Configuration and verification
 RUN sed -i 's/#listeners=PLAINTEXT:\/\/:9092/listeners=PLAINTEXT:\/\/0.0.0.0:9092/' /etc/kafka/server.properties
