--- a/KafkaService/Dockerfile
+++ b/KafkaService/Dockerfile
@@ -33,7 +33,7 @@ RUN echo "tickTime=2000" >> /opt/zookeeper/conf/zoo.cfg && \
 
 # Fix permission issues
 RUN chown -R cp-kafka:confluent /opt/zookeeper /etc/kafka/ /var/lib/kafka/ /var/log/kafka/
-RUN chmod -R 777 /etc/kafka/ /var/lib/kafka/ /var/log/kafka/ /opt/zookeeper/data/ /var/lib/kafka/
+RUN chmod -R 777 /etc/kafka/ /var/lib/kafka/ /var/log/kafka/ /opt/zookeeper/data/ /var/lib/kafka/ /var/lib/kafka/data
 
 # Configuration and verification
 RUN sed -i 's/#listeners=PLAINTEXT:\/\/:9092/listeners=PLAINTEXT:\/\/0.0.0.0:9092/' /etc/kafka/server.properties
