--- a/KafkaService/Dockerfile
+++ b/KafkaService/Dockerfile
@@ -32,8 +32,9 @@ RUN echo "tickTime=2000" >> /opt/zookeeper/conf/zoo.cfg && \
     echo "syncLimit=2" >> /opt/zookeeper/conf/zoo.cfg
 
 # Fix permission issues
-RUN chown -R cp-kafka:confluent /opt/zookeeper /etc/kafka/ /var/lib/kafka/ /var/log/kafka/
+RUN chown -R cp-kafka:confluent /opt/zookeeper /etc/kafka/ /var/lib/kafka/ /var/log/kafka/ /var/lib/kafka/data
 RUN chmod -R 777 /etc/kafka/ /var/lib/kafka/ /var/log/kafka/ /opt/zookeeper/data/ /var/lib/kafka/ /var/lib/kafka/data
+
 
 # Configuration and verification
 RUN sed -i 's/#listeners=PLAINTEXT:\/\/:9092/listeners=PLAINTEXT:\/\/0.0.0.0:9092/' /etc/kafka/server.properties
